Listo para publicar v1

--- a/index.html
+++ b/index.html
@@ -86,9 +86,12 @@
                     <div>
                         <h5>Alan Gentile Aumente</h5>
                         <p>Soy estudiante de Ingenieria Informatica y tambien de una Tecnicatuda en Desarrollo Web
-                            ambas en la Universidad Nacional de La Matanza (UNLaM). Tengo conocimientos en varios lenguajes
-                            de programacion, reparacion de computadoras y Ethical Hacking. <br><br> Quiero formar parte de una empresa 
-                            en la que poder aplicar mis conocimientos y capacidades en estrategias reales, contribuyendo con ello 
+                            ambas en la Universidad Nacional de La Matanza (UNLaM). Tengo conocimientos en varios
+                            lenguajes
+                            de programacion, reparacion de computadoras y Ethical Hacking. <br><br> Quiero formar parte
+                            de una empresa
+                            en la que poder aplicar mis conocimientos y capacidades en estrategias reales, contribuyendo
+                            con ello
                             tanto a mi evolución profesional como a alcanzar los objetivos planteados por la empresa.
                         </p>
                     </div>
@@ -299,7 +302,7 @@
                 <div id="sub-cat_soft">
                     <a class="proy-container" id="soft-unity">
                         <div>
-                            <img src="img/paginas/sub-categorias/one.png" alt="">
+                            <img src="img/paginas/sub-categorias/unity.png" alt="">
                         </div>
 
                         <div>
@@ -373,6 +376,35 @@
                 </div>
 
                 <div id="proyectos_web_one">
+
+                    <a href="https://genti13.github.io/ONE-Desafio_Encriptador/" class="proy-container">
+                        <div>
+                            <img src="img/paginas/proyectos/one/deco.png" alt="">
+                        </div>
+
+                        <div>
+                            <h3>Encriptador</h3>
+                        </div>
+
+                        <div>
+                            <p>Primer Challenge de ONE, un Encriptador/Desencriptador.</p>
+                        </div>
+                    </a>
+
+                    <a href="https://genti13.github.io/ONE-Desafio_Ahorcado/" class="proy-container">
+                        <div>
+                            <img src="img/paginas/proyectos/one/ahorcado.png" alt="">
+                        </div>
+
+                        <div>
+                            <h3>Ahorcado</h3>
+                        </div>
+
+                        <div>
+                            <p>Segundo Challenge de ONE, un juego del ahorcado.</p>
+                        </div>
+                    </a>
+
                     <a id="volver-cat" class="proy-container">
                         <div>
                             <img src="img/paginas/volver.png" alt="">
@@ -389,6 +421,28 @@
                 </div>
 
                 <div id="proyectos_web_unlam">
+
+                    <a href="https://github.com/Genti13/Unlam-Progra_Web_1-TP" class="proy-container">
+                        <div>
+                            <img src="img/paginas/proyectos/unlam/tp_grupal_1.png" alt="">
+                        </div>
+
+                        <div>
+                            <h3>Trabajo Grupal - Online Market</h3>
+                        </div>
+
+                        <div>
+                            <p>Trabajo practico en equipo que constó en maquetar un sitio de compras online.
+                                CALIFICACIÓN: 8.
+                            </p>
+                        </div>
+
+
+                        <p class="project-warning">La version basica de Git Pages no permite visualizacion de trabajos
+                            en conjunto</p>
+
+                    </a>
+
                     <a id="volver-cat" class="proy-container">
                         <div>
                             <img src="img/paginas/volver.png" alt="">
@@ -407,6 +461,25 @@
 
                 <!--Seccion-Software-->
                 <div id="proyectos_soft_unity">
+
+                    <a href="" class="proy-container">
+                        <div>
+                            <img src="img/paginas/sub-categorias/unity.png" alt="">
+                        </div>
+
+                        <div>
+                            <h3>Sistema de Dialogos</h3>
+                        </div>
+
+                        <div>
+                            <p>Sistema capaz de controlar en que momento se ejecutaran los dialogos,
+                                asi como que diran y varias propiedades para personalizarlos</p>
+                        </div>
+
+                        <p class="project-warning">Permiso de publicacion del material pendiente de aprobacion del
+                            cliente</p>
+                    </a>
+
                     <a id="volver-cat" class="proy-container">
                         <div>
                             <img src="img/paginas/volver.png" alt="">
@@ -441,6 +514,13 @@
                         <img src="img/ico/mail.svg" alt="" class="main-ico">
                         <p><a href="mailto:alanaumente@gmail.com">alanaumente@gmail.com</a></p>
                     </article>
+
+                    <article class="descargar-cv">
+                        <a href="content/cv.pdf" download="CV - Gentile Aumente Alan">
+                            <img src="img/ico/download-solid.svg" alt="Descargar CV" class="main-ico">
+                            <p>Descargar CV</p>
+                        </a>
+                    </article>
                 </section>
 
                 <h4>Contactarme</h4>
@@ -450,12 +530,13 @@
 
                     <div>
                         <input type="text" name="nombre" id="contacto-nombre" placeholder="Nombre" required>
-                        <input type="email" name="mail"  id="contacto-mial" placeholder="Mail" required>
+                        <input type="email" name="mail" id="contacto-mial" placeholder="Mail" required>
                     </div>
 
                     <input type="text" name="asunto" id="contacto-asunto" placeholder="Asunto" required>
 
-                    <textarea name="mensaje" id="contacto-mensaje" cols="30" rows="10" placeholder="Mensaje" required></textarea>
+                    <textarea name="mensaje" id="contacto-mensaje" cols="30" rows="10" placeholder="Mensaje"
+                        required></textarea>
 
                     <input type="submit" value="Enviar Mensaje">
 
